--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         <activity android:name=".Testes" />
         <activity android:name=".Trabalhos" />
         <activity android:name=".Detalhes" />
-        <activity android:name=".EditTeste" />
-        <activity android:name=".EditTrabalho"></activity>
+        <activity android:name=".Edit" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
